docs: project명 변경

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-counter-test",
+  "name": "e2e-test-tutorial",
   "version": "1.0.0",
   "description": "<br/> <br/>",
   "main": "index.js",
