--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "cypress": "^12.9.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cypress:run": "cypress run",
+    "cypress:open": "cypress open"
   },
   "repository": {
     "type": "git",
