chore: yarn add parcle-bundler, 초기 페이지 진입 테스트 코드 추가

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "<br/> <br/>",
   "main": "index.js",
   "dependencies": {
-    "cypress": "^12.9.0"
+    "cypress": "^12.9.0",
+    "parcel-bundler": "^1.12.5"
   },
   "scripts": {
+    "start": "parcel index.html",
     "cypress:run": "cypress run",
     "cypress:open": "cypress open"
   },
